# join-notes

./: .gitignore  .notes-ignore  README.md  concat-notes.py  migrate.py  projects.example.json  projects.json  pyproject.toml
config/: projects.example.yml  projects.yml
note_concatenator/: __init__.py
note_concatenator/application/: concatenate_project.py
note_concatenator/cli/: main.py
note_concatenator/domain/: entities.py
note_concatenator/infrastructure/: config_loader.py  file_discovery.py
